# Dialogo

./: ARCHITECTURE.md  Cargo.toml  Containerfile  DEVELOPMENT.md  README.md  XMPP_Architecture.drawio  build.sh  container-build.sh  go.mod  main.go  run-in-container.sh
internal/ui/: ui.go
migrations/: 001_initial.sql
src/: lib.rs  main.rs  storage.rs
src_backup/: app.rs  config.rs  error.rs  main.rs  main_simple.rs
src_backup/ui/: chat_window.rs  main_window.rs  mod.rs  roster_window.rs  settings_window.rs
src_backup/ui/dialogs/: about_dialog.rs  add_contact_dialog.rs  connection_dialog.rs  file_transfer_dialog.rs  mod.rs  subscription_dialog.rs
src_backup/ui/widgets/: emoji_picker.rs  file_upload_widget.rs  message_bubble.rs  mod.rs  presence_indicator.rs  status_icon.rs
src_backup/xmpp/: client.rs  events.rs  mod.rs  stanza_handler.rs
